[package]
name = "trie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
shuttle-axum = "0.34.0"
shuttle-runtime = "0.34.0"
tokio = "1.28.2"
tracing = "0.1.40"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
